# sellingmanagement

./: .gitignore  app.py  note  pyproject.toml  requirements.txt
migrations/versions/: 026aa358cfb3_.py  1023f74eebef_.py  22b5f826b3e5_.py  57a141fcf6bf_.py  8946ac464724_.py  91523898ebb4_.py  e09fc6966d3f_.py  e75ab8385b53_.py
templates/: base.html  belanja.html  belanja_rinci.html  harga_jual.html  index.html  modal.html  penjualan.html  produksi.html  sumber_dana.html
