[project]
name = "sellingmanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "bcrypt==4.0.1",
    "blinker==1.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "currency-converter==0.5.5",
    "currencyconverter>=0.18.9",
    "flask==3.0.0",
    "flask-bcrypt==1.0.1",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.0.1",
    "gunicorn==22.0.0",
    "importlib-metadata==7.0.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "mako==1.3.0",
    "markupsafe==2.1.3",
    "packaging==23.2",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.22",
    "typing-extensions==4.8.0",
    "werkzeug==3.0.1",
    "zipp==3.17.0",
]
